# ewt

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  build.gradle.kts  settings.gradle.kts
.ci/: shared-templates.yml
.docker/: Dockerfile
annotation-processor/: build.gradle.kts
docs/: coverage.md
evolve-app/: pubspec.yaml
evolve-app/lib/: ewt_evolve_glue.dart  main.dart
ewt.api/: build.gradle.kts
examples/: README.md  build.gradle.kts
generator/: README.md  build.gradle.kts  pubspec.yaml
generator/lib/: animated_wrapper.dart  animation_controller_methods.dart  gen.dart  generation_index.dart  lang_writers.dart  sub_animated_state.dart  sub_animated_state_methods.dart  subwidgets.dart  types.dart
generator/test/: transpiler_test.dart
generator/tool/: coverage_audit.dart
gradle/wrapper/: gradle-wrapper.properties
hot-reload-client/: build.gradle.kts
hot-reload-plugin/: build.gradle.kts  settings.gradle.kts
widgets/: .metadata  README.md  build.gradle.kts  ffigen.yaml  pubspec.yaml
widgets/example/: pubspec.yaml
widgets/lib/: animated_wrapper.dart  animation_controller_methods.dart  factories.dart  factories_gen.dart  hot_reload.dart  sub_animated_state.dart  sub_animated_state_methods.dart  subwidgets.dart  widgets.dart  widgets_bindings_generated.dart
widgets/linux/: CMakeLists.txt
widgets/macos/: Package.swift  widgets.podspec
widgets/src/: CMakeLists.txt  common.h  factories.h  objects.h  typedefs.h  widgets.c  widgets.h
widgets/test/: generation_test.dart  sum_test.dart
widgets/tool/: generation_index.dart  generator.dart  (+2 more)
(+713 files in other folders)
